improvement to entity name rendering and later networkx versions

--- a/example.ini
+++ b/example.ini
@@ -72,6 +72,9 @@ max_nodes = 500
 # minimum post/thread frequency count allowed before it is visualized (can be None to always visualize)
 filter_post_freq = None
 
+# show node prefix (only for debug really)
+preserve_node_prefix = False
+
 # colours for categories
 colour_map = {
 	'root' : '#99D399',
@@ -106,3 +109,6 @@ entity_prefix_map = {
 # hash certain labels to pseudonymize graph (e.g. for publication). use [] to not pseudonymize at all.
 list_pseudonymization = []
 #list_pseudonymization = [ 'entity_vendor', 'entity_person', 'post', 'root' ]
+
+# max char node length (to avoid nodes with very long names) - 0 for no truncation
+max_node_text_length = 30
